--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,17 @@ a {
 body {
   margin: auto;
   background-color: #0B2434;
-  padding: 3rem;
+  padding: 2rem;
   color: #2B283A;
 }
 
 main{
-  margin: 2rem;
-  padding: 27rem 15rem;
-  background-color: #FFF;
+  margin: auto;
+  max-width: 800px;
+  height: 450px;
+  background-color: #F5F5F5;
   border-radius: .5rem;
+  padding: 2rem;
 }
 
 .titleText{
