--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,9 @@ body {
 }
 
 main{
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   max-width: 800px;
   height: 450px;
   background-color: #F5F5F5;
@@ -51,5 +53,39 @@ main{
   text-align: center;
   letter-spacing: -0.03em;
   color: #4A4E74;
+}
 
+/*Dice stylings*/
+
+.dice-section{
+  margin-top: 3rem;
+  display: grid;
+  grid-template: auto auto / repeat(5, 1fr);
+  gap: 20px;
+}
+
+.die{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FFFFFF;
+  border: 1ps solid black;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: .5rem; 
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.die:hover{
+  background-color: #f9f7f7e8;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.163);
+
+}
+
+.die-number{
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: .24rem;
 }
