--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ main{
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
   max-width: 800px;
   height: 450px;
   background-color: #F5F5F5;
@@ -89,4 +90,28 @@ main{
   font-size: 4rem;
   font-weight: 700;
   line-height: .24rem;
+}
+
+button{
+  background: #5035FF;
+  box-shadow: 0 3.2px 7.68px rgba(0, 0, 0, 0.18);
+  border-radius: .5rem;
+  border: none;
+  padding: 1rem 2rem;
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 2rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #FFF;
+}
+
+button:hover{
+  background-color: #5035ffda;
+
+}
+
+button:active{
+  background-color: #5035ff9e;
 }
