--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,8 @@ a {
 }
 
 body {
-  margin: auto;
+  margin: auto auto;
   background-color: #0B2434;
-  padding: 2rem;
   color: #2B283A;
 }
 
@@ -26,21 +25,18 @@ main{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   max-width: 800px;
   height: 450px;
   background-color: #F5F5F5;
   border-radius: .5rem;
-  padding: 2rem;
+  padding: 1.5rem;
 }
 
 .titleText{
   font-weight: 700;
   font-size: 4rem;
   line-height: 3rem;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: -0.03em;
 }
 
@@ -50,9 +46,6 @@ main{
   font-weight: 400;
   font-size: 2rem;
   line-height: 1.6rem;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: -0.03em;
   color: #4A4E74;
 }
@@ -117,9 +110,17 @@ button{
 
 button:hover{
   background-color: #5035ffda;
-
 }
 
 button:active{
   background-color: #5035ff9e;
+}
+
+/* Best score section*/
+
+.score{
+  color: #0B2434;
+  font-size: 1.5rem;
+  padding: 0 0 0 .75rem;
+  margin: 0;
 }
