--- a/src/index.css
+++ b/src/index.css
@@ -50,41 +50,6 @@ main{
   color: #4A4E74;
 }
 
-/*Dice stylings*/
-
-.dice-section{
-  margin-top: 3rem;
-  display: grid;
-  grid-template: auto auto / repeat(5, 1fr);
-  gap: 20px;
-}
-
-.die{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #FFFFFF;
-  border: 1ps solid black;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
-  border-radius: .5rem; 
-  height: 50px;
-  width: 50px;
-  text-align: center;
-  cursor: pointer;
-}
-
-.die:hover{
-  background-color: #f9f7f7e8;
-  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.163);
-
-}
-
-.die-number{
-  font-size: 4rem;
-  font-weight: 700;
-  line-height: .24rem;
-}
-
 button{
   background: #5035FF;
   box-shadow: 0 3.2px 7.68px rgba(0, 0, 0, 0.18);
@@ -98,14 +63,6 @@ button{
   align-items: center;
   text-align: center;
   color: #FFF;
-}
-
-.dieHeld{
-  background-color: #59E391;
-}
-
-.dieHeld:hover{
-  background-color: #59e390a0;
 }
 
 button:hover{
@@ -123,4 +80,106 @@ button:active{
   font-size: 1.5rem;
   padding: 0 0 0 .75rem;
   margin: 0;
+}
+
+/*Dice stylings*/
+
+.dice-section{
+  margin-top: 3rem;
+  display: grid;
+  grid-template: auto auto / repeat(5, 1fr);
+  gap: 20px;
+}
+
+.die{
+  background-color: #FFFFFF;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: .5rem; 
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+  padding: 4px;
+}
+
+.die:hover{
+  background-color: #f9f7f7e8;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.163);
+
+}
+
+/* Dice face styles*/
+
+.dot {
+  display:block;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color:black; 
+}
+
+.die-one{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.die-two{
+  display: flex;
+  align-items: flex-start;
+  justify-content : space-between;
+}
+.die-two >.dot:nth-of-type(2) {
+  align-self: flex-end;
+}
+
+.die-three{
+  display: flex;
+  justify-content : space-between;
+}
+.die-three >.dot:nth-of-type(2) {
+  align-self: center;
+}
+.die-three >.dot:nth-of-type(3) {
+  align-self: flex-end;
+}
+
+.die-four{
+  display: flex;
+  justify-content: space-between;
+}
+.die-four>.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.die-five{
+  display: flex;
+  justify-content: space-between;
+}
+.die-five>.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.die-five>.column:nth-of-type(2){
+  align-self: center;
+}
+
+.die-six{
+  display: flex;
+  justify-content: space-between;
+}
+.die-six>.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.dieHeld{
+  background-color: #59E391;
+  border-radius: .5rem;
+}
+
+.dieHeld:hover{
+  background-color: #59e390a0;
 }
